--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: rgba(17, 204, 237, 0.727);
+    max-width: 1000px;
+    margin: auto;
 }
 #title, .subtitle, .post_title {
     color: rgb(0, 0, 0);
@@ -9,13 +11,17 @@ body {
     border-radius: 30px;
 }
 .post_title {
-    font-size: 25px;
+    font-size: 40px;
     font-style: italic;
     margin-bottom: 15px;
+    margin-top: 5px;
     text-align: left;
     align-items: center;
-    align-self: center;
-    
+    align-self: center;   
+}
+a {
+    text-decoration: none;
+
 }
 .post {
     font-size: 18px;
@@ -25,7 +31,8 @@ body {
     border-radius: 10px;
     margin-bottom: 15px;
     margin-top: 15px;
-    width: 1080px;
+    max-width: 1000px;
+    margin: auto;
     text-align: center;
     align-items: center;
     align-self: center;
@@ -33,14 +40,16 @@ body {
 .img {
     border: 5px rgb(255, 252, 239);
     border-radius: 14px;
+    margin: auto;
+    max-width: 100%;
 }
 .img_post {
-
+height: 100%;
 text-align: center;
 }
 .rodape {
     font-size: 16px;
-    
+    margin-top: 5px;
 }
 .texto {
     text-align: justify;
